# cosmolog

./: .gitignore  .gitlab-ci.yml.j2  .travis.yml  AUTHORS  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: actions.yml
cosmolog/: __init__.py  _version.py  cosmologger.py
tests/: __init__.py  conftest.py  test_cosmolog_event.py  test_cosmologger.py  test_human.py
