#!/usr/bin/env python

# Copyright 2024 Planet Labs, PBC.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

[build-system]
requires = [
    "setuptools",
    "versioningit",
]
build-backend = "setuptools.build_meta"

[project]
name = "cosmolog"
authors = [
    {name = "Isil Demir", email = "isil@planet.com"},
]
description = "cosmolog: structured python logger"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dynamic = [
    "version",
]
dependencies = [
    "click>=6.3",
    "pytz>=2015.7",
    "python-dateutil>=2.4.2",
    "importlib-metadata; python_version < '3.8'",
]

[project.optional-dependencies]
test = [
    "pytest>=3.0.2",
    "flake8==3.2.0",
    "freezegun==1.2.1",
    "tox==2.9.1",
]

[project.scripts]
human = "cosmolog.bin.cli:human"

[tool.setuptools]
packages = ["cosmolog", "cosmolog.bin"]

[tool.versioningit]
default-version = "0.0.0"  # for shallow clones in CI

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
# Example formatted version: 1.2.3+42.ge174a1f
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
# Example formatted version: 1.2.3+42.ge174a1f.dirty
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
# Example formatted version: 1.2.3+42.ge174a1f.dirty
